--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +7,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Happy Birthdayyyy Shiroooo 💛</h1>
-  <p>To the one who always drives forward — you inspire me more than you know.</p>
+
+  <div class="garage-door" id="garage">
+    <h1 class="glow">Happy Birthdayyyy Shiroooo 💛</h1>
+    <p class="intro">
+      I know we aren’t meeting in person, but I still wanted my love to receive something that holds a piece of my heart — this artwork is made thinking about you. 💛<br><br>
+      You’re someone who never stops moving forward — and I love you for that. Just like your love for cars, you keep driving ahead — and it inspires me constantly.<br><br>
+      I hope you always keep driving towards what makes you feel alive. Here’s a small gift from me — not just ink on paper, but a memory you can keep forever.
+    </p>
+  </div>
+
+  <div class="hug-animation">
+    <p>Since I can't physically hug you right now, here's a virtual one! 🤗</p>
+    <div class="hug">🤗🤗🤗</div>
+  </div>
+
+  <div class="quiz-section">
+    <h2>🎮 Unlock the Surprise</h2>
+    <form id="quizForm">
+      <label>1. Hugs or Kisses?<br><input type="text" name="q1" required></label><br><br>
+      <label>2. Black or White?<br><input type="text" name="q2" required></label><br><br>
+      <label>3. Which superhero do you secretly think you are?<br><input type="text" name="q3" required></label><br><br>
+      <button type="submit">Submit</button>
+    </form>
+    <div id="result" style="display:none;">
+      <p>Correct! 🎉 Unlocking your surprise... (more art, audio, video, and love will appear here!)</p>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
